samples/_failures_safe/1761256345_fb2d34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51c418b5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_51c418b5.c:152:5: error: expected declaration or statement at end of input
  152 |     heap->size = V;
      |     ^~~~
